// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main menu component snapshot - main active menu 1`] = `
<div
  className="mainMenu"
>
  <img
    alt="logo"
    className="logo"
    src="test-file-stub"
  />
  <ul
    className="mainMenuContent menuMobileContainer_closed"
  >
    <div
      className="mainMenuContent_container "
    >
      <li
        className="mainMenuContent_elem"
        data-elem="1001"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        Пункт 1
      </li>
    </div>
    <div
      className="mainMenuContent_container mainMenuContent_active"
    >
      <li
        className="mainMenuContent_elem"
        data-elem="1002"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        Пункт 2
      </li>
    </div>
    <div
      className="mainMenuContent_container "
    >
      <li
        className="mainMenuContent_elem"
        data-elem="1003"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        Пункт 3
      </li>
    </div>
    <div
      className="mainMenuContent_container "
    >
      <li
        className="mainMenuContent_elem"
        data-elem="1004"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        Пункт 4
      </li>
    </div>
    <div
      className="mainMenuContent_container "
    >
      <li
        className="mainMenuContent_elem"
        data-elem="1005"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        Пункт 5
      </li>
    </div>
  </ul>
</div>
`;

exports[`Main menu component snapshot - main non-active menu 1`] = `
<div
  className="mainMenu"
>
  <img
    alt="logo"
    className="logo"
    src="test-file-stub"
  />
  <ul
    className="mainMenuContent menuMobileContainer_closed"
  >
    <div
      className="mainMenuContent_container "
    >
      <li
        className="mainMenuContent_elem"
        data-elem="1001"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        Пункт 1
      </li>
    </div>
    <div
      className="mainMenuContent_container "
    >
      <li
        className="mainMenuContent_elem"
        data-elem="1002"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        Пункт 2
      </li>
    </div>
    <div
      className="mainMenuContent_container "
    >
      <li
        className="mainMenuContent_elem"
        data-elem="1003"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        Пункт 3
      </li>
    </div>
    <div
      className="mainMenuContent_container "
    >
      <li
        className="mainMenuContent_elem"
        data-elem="1004"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        Пункт 4
      </li>
    </div>
    <div
      className="mainMenuContent_container "
    >
      <li
        className="mainMenuContent_elem"
        data-elem="1005"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        Пункт 5
      </li>
    </div>
  </ul>
</div>
`;
